# MolQuiz

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 54ef9c33f96e_initial_schema.py
data/: demo_cards.yaml  iupac_curated.yaml  rational_curated.yaml  review_decisions.example.yaml
docker/caddy/: Caddyfile
docker/opsin/: Dockerfile  app.py  requirements.txt
docs/: cicd.md
scripts/: deploy.sh
src/molquiz/: __init__.py  config.py  container.py  dev_polling.py  logging.py  main.py  metrics.py  worker.py
src/molquiz/bot/: keyboards.py  router.py
src/molquiz/cli/: build_iupac_seed.py  generate_depictions.py  import_pubchem.py  publish_ready.py  review_apply.py  review_export.py  seed_demo.py  seed_full.py  seed_rational.py  sync_ru_iupac.py
src/molquiz/db/: models.py  session.py
src/molquiz/services/: answer_checker.py  content_service.py  depiction.py  hints.py  normalization.py  opsin.py  practice_service.py  pubchem.py  qwen.py  session_store.py  translator_ru.py
tests/: conftest.py  test_answer_checker.py  test_bot_router.py  test_config.py  test_content_review.py  test_depiction_service.py  test_normalization.py  test_practice_service.py  test_qwen_client.py  test_translator_ru.py
